# heroes-siege-tui

./: .gitignore  DECISIONS.md  DOGFOOD.md  Makefile  README.md  homm2.py  pyproject.toml
heroes_siege_tui/: __init__.py  ai.py  app.py  combat.py  content.py  scenarios.py  tiles.py
homm2_tui/: game.py  hex.py  tui.tcss
screenshots/: README.md  gameplay.tcell  hero.tcell
tests/: perf.py  playtest.py  qa.py
